Fix postMessage in embedded Contact form (#2673)
* Fix postMessage in embedded Contact form

[CORE-532]

* Separate embedded form

Add thank you

* Screaming snake case

* Fix layout issues

* Link to subjects page instead of errata

--- a/src/app/pages/contact/contact.scss
+++ b/src/app/pages/contact/contact.scss
@@ -60,34 +60,6 @@
 
     form {
         color: os-color(blue);
-
-        textarea {
-            height: auto;
-            resize: none;
-        }
-
-        > .form-content > label {
-            display: block;
-            height: $form-element-height;
-            margin-bottom: $form-element-height;
-
-            &.auto-height {
-                height: auto;
-            }
-        }
-    }
-
-    .btn {
-        @include button();
-        margin-bottom: $form-element-height;
-    }
-
-    [type="submit"] {
-        @extend %primary;
-
-        float: none;
-        margin: 0;
-        padding: 0 5rem;
     }
 
     address {
